--- a/build.gradle
+++ b/build.gradle
@@ -19,24 +19,20 @@ repositories {
 }
 
 sourceSets {
-        main.kotlin.srcDirs += 'episodes'
+    main.kotlin.srcDirs += 'episodes'
 }
 
 
 dependencies {
-    compileOnly gradleApi()
-
-
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile "org.reflections:reflections:0.9.11"
     compile 'com.squareup.okhttp3:okhttp:3.7.0'
     compile "com.atlassian.commonmark:commonmark:0.9.0"
     compile "io.reactivex.rxjava2:rxjava:2.1.0"
-    compile "org.eclipse.jgit:org.eclipse.jgit:3.5.0.201409260305-r"
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-moshi:2.3.0'
 }
-
-
 
 // ./graldew build podcast to generate podcast related stuff like rss feed etc.
 task podcast(dependsOn: 'classes', type: JavaExec) {
